--- a/html/login/login-recovery-authn-code-input.html
+++ b/html/login/login-recovery-authn-code-input.html
@@ -7,9 +7,9 @@
     <link href="http://localhost:5173/src/index.css" rel="stylesheet">
     <script defer src="http://localhost:5173/src/index.ts" type="module"></script>
   </head>
-  <body class="bg-secondary-100 flex flex-col items-center justify-center min-h-screen sm:py-16">
+  <body class="bg-secondary-100 dark:bg-black flex flex-col items-center justify-center min-h-screen sm:py-16">
     <div class="max-w-md space-y-6 w-full">
-      <div class="bg-white p-8 rounded-lg space-y-6">
+      <div class="bg-white border-2 border-white p-8 rounded-lg space-y-6 dark:bg-secondary-900 dark:text-secondary-100 dark:border-secondary-800">
         <div class="space-y-4">
           <div class="font-bold text-center text-2xl">
             Keywind
@@ -22,34 +22,34 @@
           </div>
           <form class="m-0 space-y-4" method="post" action="loginAction">
             <div>
-              <label class="sr-only" for="recoveryCodeInput"> Recovery code #"codeNumber" </label> <input autofocus required aria-invalid="false" class="block border-secondary-200 mt-1 rounded-md w-full focus:border-primary-300 focus:ring focus:ring-primary-200 focus:ring-opacity-50 sm:text-sm" id="recoveryCodeInput" name="recoveryCodeInput" placeholder="Recovery code #&quot;codeNumber&quot;" type="text" autocomplete="off">
+              <label class="sr-only" for="recoveryCodeInput"> Recovery code #"codeNumber" </label> <input autofocus required aria-invalid="false" class="block border-secondary-200 mt-1 rounded-md w-full dark:bg-secondary-800 dark:border-secondary-700 dark:placeholder:text-secondary-400 focus:border-primary-300 focus:ring focus:ring-primary-200 focus:ring-opacity-50 sm:text-sm" id="recoveryCodeInput" name="recoveryCodeInput" placeholder="Recovery code #&quot;codeNumber&quot;" type="text" autocomplete="off">
               <div class="mt-2 text-red-600 text-sm">
               </div>
             </div>
             <div class="flex flex-col pt-4 space-y-2">
-              <button class="bg-primary-600 text-white focus:ring-primary-600 hover:bg-primary-700 px-4 py-2 text-sm flex justify-center relative rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-offset-2" name="login" type="submit"> Sign In </button>
+              <button class="bg-primary-600 dark:bg-primary-800 text-white focus:ring-primary-600 hover:bg-primary-700 px-4 py-2 text-sm flex justify-center relative rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-offset-2" name="login" type="submit"> Sign In </button>
             </div>
           </form>
           <form action="loginAction" method="post">
-            <input name="tryAnotherWay" type="hidden" value="on"> <button class="bg-secondary-100 text-secondary-600 focus:ring-secondary-600 hover:bg-secondary-200 hover:text-secondary-900 px-4 py-2 text-sm flex justify-center relative rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-offset-2" type="submit"> Try Another Way </button>
+            <input name="tryAnotherWay" type="hidden" value="on"> <button class="bg-secondary-100 text-secondary-600 dark:bg-secondary-800 dark:text-secondary-400 focus:ring-secondary-600 hover:bg-secondary-200 hover:text-secondary-900 dark:hover:bg-secondary-700 dark:hover:text-secondary-300 px-4 py-2 text-sm flex justify-center relative rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-offset-2" type="submit"> Try Another Way </button>
           </form>
         </div>
       </div>
       <div class="flex justify-around">
         <div class="relative" x-data="{ open: false }">
-          <button class="text-secondary-600 hover:text-secondary-900 inline-flex" @click="open = true" type="button">
+          <button class="text-secondary-600 hover:text-secondary-900 dark:text-secondary-400 dark:hover:text-secondary-200 inline-flex" @click="open = true" type="button">
             <div class="flex items-center">
               <span class="mr-1 text-sm">English</span>
               <svg class="h-5 w-5" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path clip-rule="evenodd" d="M5.23017 7.20938C5.52875 6.92228 6.00353 6.93159 6.29063 7.23017L10 11.1679L13.7094 7.23017C13.9965 6.93159 14.4713 6.92228 14.7698 7.20938C15.0684 7.49647 15.0777 7.97125 14.7906 8.26983L10.5406 12.7698C10.3992 12.9169 10.204 13 10 13C9.79599 13 9.60078 12.9169 9.45938 12.7698L5.20938 8.26983C4.92228 7.97125 4.93159 7.49647 5.23017 7.20938Z" fill-rule="evenodd" />
               </svg>
             </div></button>
-          <div @click.away="open = false" class="absolute bg-white bottom-0 -left-4 max-h-80 mb-6 overflow-y-scroll rounded-lg shadow-lg" x-cloak x-show="open">
+          <div @click.away="open = false" class="absolute bg-white bottom-0 -left-4 max-h-80 mb-6 overflow-y-scroll rounded-lg shadow-lg dark:bg-secondary-900" x-cloak x-show="open">
             <div class="px-4 py-2">
-              <a class="text-secondary-600 hover:text-secondary-900 text-sm inline-flex" href="url"> Deutsch </a>
+              <a class="text-secondary-600 hover:text-secondary-900 dark:text-secondary-400 dark:hover:text-secondary-200 text-sm inline-flex" href="url"> Deutsch </a>
             </div>
             <div class="px-4 py-2">
-              <a class="text-secondary-600 hover:text-secondary-900 text-sm inline-flex" href="url"> Français </a>
+              <a class="text-secondary-600 hover:text-secondary-900 dark:text-secondary-400 dark:hover:text-secondary-200 text-sm inline-flex" href="url"> Français </a>
             </div>
           </div>
         </div>
